<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/privacy_policy"
                android:layout_height="wrap_content"
                android:layout_width = "match_parent"
                android:gravity="right"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/wcs_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_wcs_url"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:text="@string/wcs_url" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sip_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_sip_login"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:text="@string/sip_login" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sip_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_sip_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@string/sip_password" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sip_domain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_sip_domain"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@string/sip_domain" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sip_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_sip_port"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@string/sip_port" />

            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:text="@string/register_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:id="@+id/register_required" />

            <TextView
                android:id="@+id/connect_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/connect_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_connect"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/callee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_callee"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@string/default_callee_name" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/call_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/call_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:text="@string/action_call"
                android:textStyle="bold" />

            <Button
                android:id="@+id/hold_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:text="@string/action_hold"
                android:textStyle="bold" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mute_audio"
                android:id="@+id/mute_audio"
                android:enabled="false"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mute_video"
                android:id="@+id/mute_video"
                android:enabled="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <com.flashphoner.fpwcsapi.layout.PercentFrameLayout
                    android:id="@+id/local_video_layout"
                    android:layout_width="0dip"
                    android:layout_height="200dp"
                    android:layout_weight=".5">

                    <org.webrtc.SurfaceViewRenderer
                        android:id="@+id/local_video_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </com.flashphoner.fpwcsapi.layout.PercentFrameLayout>

                <com.flashphoner.fpwcsapi.layout.PercentFrameLayout
                    android:id="@+id/remote_video_layout"
                    android:layout_width="0dip"
                    android:layout_height="200dp"
                    android:layout_weight=".5">

                    <org.webrtc.SurfaceViewRenderer
                        android:id="@+id/remote_video_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </com.flashphoner.fpwcsapi.layout.PercentFrameLayout>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</LinearLayout>
